# Pulp test suite — Catch2

# Build check (no Catch2 dependency)
add_executable(pulp-test-build-check test_build_check.cpp)
target_link_libraries(pulp-test-build-check PRIVATE pulp::platform pulp::runtime)
add_test(NAME build-check COMMAND pulp-test-build-check)

# Appcast/auto-update tests
add_executable(pulp-test-appcast test_appcast.cpp)
target_link_libraries(pulp-test-appcast PRIVATE pulp::ship Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-appcast)

# Codesign tests
add_executable(pulp-test-codesign test_codesign.cpp)
target_link_libraries(pulp-test-codesign PRIVATE pulp::ship Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-codesign)

# Sync primitives tests (SeqLock, TripleBuffer)
add_executable(pulp-test-sync test_sync_primitives.cpp)
target_link_libraries(pulp-test-sync PRIVATE pulp::runtime Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-sync)

# Drag-and-drop tests
add_executable(pulp-test-dnd test_drag_drop.cpp)
target_link_libraries(pulp-test-dnd PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-dnd)

# OSC tests
add_executable(pulp-test-osc test_osc.cpp)
target_link_libraries(pulp-test-osc PRIVATE pulp::osc Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-osc)

# SVG tests
add_executable(pulp-test-svg test_svg.cpp)
target_link_libraries(pulp-test-svg PRIVATE pulp::canvas Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-svg)

# Effects tests
add_executable(pulp-test-effects test_effects.cpp)
target_link_libraries(pulp-test-effects PRIVATE pulp::canvas Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-effects)

# Signal/DSP tests
add_executable(pulp-test-signal test_signal.cpp)
target_link_libraries(pulp-test-signal PRIVATE pulp::signal Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-signal)

# Clipboard tests
add_executable(pulp-test-clipboard test_clipboard.cpp)
target_link_libraries(pulp-test-clipboard PRIVATE pulp::platform Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-clipboard)

# Platform tests
add_executable(pulp-test-platform test_platform.cpp)
target_link_libraries(pulp-test-platform PRIVATE pulp::platform Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-platform)

# Runtime tests
add_executable(pulp-test-runtime test_runtime.cpp)
target_link_libraries(pulp-test-runtime PRIVATE pulp::runtime Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-runtime)

# Events tests
add_executable(pulp-test-events test_events.cpp)
target_link_libraries(pulp-test-events PRIVATE pulp::events Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-events)

# Audio file I/O tests
add_executable(pulp-test-audio-file test_audio_file.cpp)
target_link_libraries(pulp-test-audio-file PRIVATE pulp::audio Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-audio-file)

# Audio tests
add_executable(pulp-test-audio test_audio.cpp)
target_link_libraries(pulp-test-audio PRIVATE pulp::audio Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-audio)

# MIDI tests
add_executable(pulp-test-midi test_midi.cpp)
target_link_libraries(pulp-test-midi PRIVATE pulp::midi Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-midi)

# State tests
add_executable(pulp-test-state test_state.cpp)
target_link_libraries(pulp-test-state PRIVATE pulp::state Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-state)

# Binding tests
add_executable(pulp-test-binding test_binding.cpp)
target_link_libraries(pulp-test-binding PRIVATE pulp::state Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-binding)

# Headless adapter tests
add_executable(pulp-test-headless test_headless.cpp)
target_link_libraries(pulp-test-headless PRIVATE pulp::format Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-headless)

# Diagnostic reporter tests
add_executable(pulp-test-diagnostic test_diagnostic_reporter.cpp)
target_link_libraries(pulp-test-diagnostic PRIVATE pulp::format Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-diagnostic)

# CLAP entry point macro test
if(PULP_HAS_CLAP)
    add_executable(pulp-test-clap-entry test_clap_entry.cpp
        ${CMAKE_SOURCE_DIR}/core/format/src/clap_adapter.cpp
    )
    target_link_libraries(pulp-test-clap-entry PRIVATE pulp::format clap Catch2::Catch2WithMain)
    catch_discover_tests(pulp-test-clap-entry)
endif()

# GPU surface tests
if(PULP_ENABLE_GPU)
    add_executable(pulp-test-gpu-surface test_gpu_surface.cpp)
    target_link_libraries(pulp-test-gpu-surface PRIVATE pulp::render Catch2::Catch2WithMain)
    catch_discover_tests(pulp-test-gpu-surface)

    # Skia surface test
    add_executable(pulp-test-skia-surface test_skia_surface.cpp)
    target_link_libraries(pulp-test-skia-surface PRIVATE pulp::render Catch2::Catch2WithMain)
    catch_discover_tests(pulp-test-skia-surface)
endif()

# Animation tests
add_executable(pulp-test-animation test_animation.cpp)
target_link_libraries(pulp-test-animation PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-animation)

# Auto UI tests
add_executable(pulp-test-auto-ui test_auto_ui.cpp)
target_link_libraries(pulp-test-auto-ui PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-auto-ui)

# Script engine tests
add_executable(pulp-test-script test_script_engine.cpp)
target_link_libraries(pulp-test-script PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-script)

# Theme/design token tests
add_executable(pulp-test-theme test_theme.cpp)
target_link_libraries(pulp-test-theme PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-theme)

# Screenshot tests
add_executable(pulp-test-screenshot test_screenshot.cpp)
target_link_libraries(pulp-test-screenshot PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-screenshot)

# Canvas tests
add_executable(pulp-test-canvas test_canvas.cpp)
target_link_libraries(pulp-test-canvas PRIVATE pulp::canvas Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-canvas)

# View and layout tests
add_executable(pulp-test-view test_view.cpp)
target_link_libraries(pulp-test-view PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-view)

# Audio bridge tests
add_executable(pulp-test-audio-bridge test_audio_bridge.cpp)
target_link_libraries(pulp-test-audio-bridge PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-audio-bridge)

# Widget tests
add_executable(pulp-test-widgets test_widgets.cpp)
target_link_libraries(pulp-test-widgets PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-widgets)

# Hot-reload tests
add_executable(pulp-test-hot-reload test_hot_reload.cpp)
target_link_libraries(pulp-test-hot-reload PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-hot-reload)

# Inspector tests
add_executable(pulp-test-inspector test_inspector.cpp)
target_link_libraries(pulp-test-inspector PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-inspector)

# Widget bridge tests
add_executable(pulp-test-widget-bridge test_widget_bridge.cpp)
target_link_libraries(pulp-test-widget-bridge PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-widget-bridge)

# Input events tests
add_executable(pulp-test-input-events test_input_events.cpp)
target_link_libraries(pulp-test-input-events PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-input-events)

# Text editor tests
add_executable(pulp-test-text-editor test_text_editor.cpp)
target_link_libraries(pulp-test-text-editor PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-text-editor)

# UI components tests (ComboBox, TabPanel, ListBox, ScrollView, Tooltip, ProgressBar, CallOutBox)
add_executable(pulp-test-ui-components test_ui_components.cpp)
target_link_libraries(pulp-test-ui-components PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-ui-components)

# Modal overlay tests
add_executable(pulp-test-modal test_modal.cpp)
target_link_libraries(pulp-test-modal PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-modal)

# Design export tests
add_executable(pulp-test-design-export test_design_export.cpp)
target_link_libraries(pulp-test-design-export PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-design-export)

# App framework tests (KeyMapping, MenuBar, Toolbar, AppSettings)
add_executable(pulp-test-app-framework test_app_framework.cpp)
target_link_libraries(pulp-test-app-framework PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-app-framework)

# Preset manager tests
add_executable(pulp-test-preset-manager test_preset_manager.cpp)
target_link_libraries(pulp-test-preset-manager PRIVATE pulp::state Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-preset-manager)

# Waveform editor tests
add_executable(pulp-test-waveform-editor test_waveform_editor.cpp)
target_link_libraries(pulp-test-waveform-editor PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-waveform-editor)

# Preset browser UI tests
add_executable(pulp-test-preset-browser test_preset_browser.cpp)
target_link_libraries(pulp-test-preset-browser PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-preset-browser)

# DSP expansion tests (FIR, Ballistics, LogRamp, ProcessorChain, LookupTable, TPT)
add_executable(pulp-test-dsp-expansion test_dsp_expansion.cpp)
target_link_libraries(pulp-test-dsp-expansion PRIVATE pulp::signal Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-dsp-expansion)

# Interpolator tests (Hermite, Lagrange, windowed-sinc)
add_executable(pulp-test-interpolator test_interpolator.cpp)
target_link_libraries(pulp-test-interpolator PRIVATE pulp::signal Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-interpolator)

# MIDI expansion tests (RPN/NRPN parser, MidiKeyboardState)
add_executable(pulp-test-midi-expansion test_midi_expansion.cpp)
target_link_libraries(pulp-test-midi-expansion PRIVATE pulp::midi Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-midi-expansion)

# Audio process load measurer tests
add_executable(pulp-test-load-measurer test_load_measurer.cpp)
target_link_libraries(pulp-test-load-measurer PRIVATE pulp::audio Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-load-measurer)

# FilterDesign tests
add_executable(pulp-test-filter-design test_filter_design.cpp)
target_link_libraries(pulp-test-filter-design PRIVATE pulp::signal Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-filter-design)

# TreeView tests
add_executable(pulp-test-tree-view test_tree_view.cpp)
target_link_libraries(pulp-test-tree-view PRIVATE pulp::view Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-tree-view)

# Undo manager tests
add_executable(pulp-test-undo-manager test_undo_manager.cpp)
target_link_libraries(pulp-test-undo-manager PRIVATE pulp::state Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-undo-manager)

# BufferingReader tests
add_executable(pulp-test-buffering-reader test_buffering_reader.cpp)
target_link_libraries(pulp-test-buffering-reader PRIVATE pulp::audio Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-buffering-reader)

# AudioWorkgroup tests
add_executable(pulp-test-workgroup test_workgroup.cpp)
target_link_libraries(pulp-test-workgroup PRIVATE pulp::audio Catch2::Catch2WithMain)
catch_discover_tests(pulp-test-workgroup)

# Plugin matrix tests (sample rate/buffer size/edge case sweep)
add_executable(pulp-test-matrix test_plugin_matrix.cpp)
target_link_libraries(pulp-test-matrix PRIVATE pulp::format Catch2::Catch2WithMain)
target_include_directories(pulp-test-matrix PRIVATE ${CMAKE_SOURCE_DIR}/examples/pulp-gain)
catch_discover_tests(pulp-test-matrix)

# Per-plugin matrix tests (separate TUs to avoid enum collisions)
add_executable(pulp-test-matrix-effect test_matrix_effect.cpp)
target_link_libraries(pulp-test-matrix-effect PRIVATE pulp::format Catch2::Catch2WithMain)
target_include_directories(pulp-test-matrix-effect PRIVATE ${CMAKE_SOURCE_DIR}/examples/pulp-effect)
catch_discover_tests(pulp-test-matrix-effect)

add_executable(pulp-test-matrix-compressor test_matrix_compressor.cpp)
target_link_libraries(pulp-test-matrix-compressor PRIVATE pulp::format Catch2::Catch2WithMain)
target_include_directories(pulp-test-matrix-compressor PRIVATE ${CMAKE_SOURCE_DIR}/examples/pulp-compressor)
catch_discover_tests(pulp-test-matrix-compressor)

add_executable(pulp-test-matrix-tone test_matrix_tone.cpp)
target_link_libraries(pulp-test-matrix-tone PRIVATE pulp::format pulp::signal Catch2::Catch2WithMain)
target_include_directories(pulp-test-matrix-tone PRIVATE ${CMAKE_SOURCE_DIR}/examples/pulp-tone)
catch_discover_tests(pulp-test-matrix-tone)

add_executable(pulp-test-matrix-drums test_matrix_drums.cpp)
target_link_libraries(pulp-test-matrix-drums PRIVATE pulp::format pulp::signal Catch2::Catch2WithMain)
target_include_directories(pulp-test-matrix-drums PRIVATE ${CMAKE_SOURCE_DIR}/examples/PulpDrums)
catch_discover_tests(pulp-test-matrix-drums)

# Golden-file audio tests (uses HeadlessHost + PulpGain)
add_executable(pulp-test-golden test_golden_audio.cpp)
target_link_libraries(pulp-test-golden PRIVATE pulp::format Catch2::Catch2WithMain)
target_include_directories(pulp-test-golden PRIVATE ${CMAKE_SOURCE_DIR}/examples/pulp-gain)
catch_discover_tests(pulp-test-golden)
